Redis Stack support cont.